[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-screener-agent"
version = "1.0.0"
description = "An AI-powered stock screener agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "ipython>=8.37.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "rich>=14.1.0",
    "yfinance>=0.2.65",
]

[project.scripts]
stockscreener ="stock_screener_agent.agent:main"

[tool.setuptools.packages.find]
include = ["stock_screener_agent*"]
exclude = ["Documentation*"]

